--- a/.coveragerc
+++ b/.coveragerc
@@ -2,19 +2,11 @@
 source = autocnet
 [report]
 omit =
+    autocnet/__init__.py
     autocnet/fileio/ControlNetFileV0002_pb2.py
     autocnet/vis/graph_view.py
-    autocnet/fileio/sqlalchemy_json/*
-    autocnet/fileio/io_multibandimager.py
-    autocnet/fileio/io_moon_minerology_mapper.py
-    autocnet/fileio/header_parser.py
-    autocnet/fileio/io_ccs.py
-    autocnet/fileio/io_jsc.py
-    autocnet/fileio/io_edr.py
-    autocnet/fileio/lookup.py
-    autocnet/fileio/utils.py
-    autocnet/utils/folds.py
-    autocnet/spectral/*
+    autocnet/matcher/cuda_extractor.py
+    autocnet/matcher/cuda_matcher.py
     bin/*
     */tests/*
 exclude_lines =
